--- a/index.html
+++ b/index.html
@@ -7,45 +7,80 @@
     <style>
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #f8d7da;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            margin: 0;
         }
         .container {
-            margin-top: 100px;
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease-in-out;
+        }
+        .container:hover {
+            transform: scale(1.05);
         }
         h1 {
-            color: #dc3545;
+            color: #d6336c;
+            font-size: 28px;
+            margin-bottom: 20px;
         }
         .buttons {
-            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
         button {
             font-size: 18px;
-            padding: 10px 20px;
-            margin: 10px;
+            padding: 12px 25px;
             border: none;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 10px;
+            font-weight: bold;
+            transition: all 0.3s ease-in-out;
         }
         #yes {
             background-color: #28a745;
             color: white;
+        }
+        #yes:hover {
+            background-color: #218838;
         }
         #no {
             background-color: #dc3545;
             color: white;
             position: absolute;
         }
+        #no:hover {
+            background-color: #c82333;
+        }
+        #message {
+            font-size: 22px;
+            font-weight: bold;
+            color: #2d3748;
+            margin-top: 20px;
+            display: none;
+            padding: 10px;
+            background: #fff3cd;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Do you wanna be my valentine ? ❤️</h1>
+        <h1>February 14th isn’t just Valentine’s Day—it’s the day the world was blessed with you. From the way you light up every moment to the way you make my heart race, I can’t imagine celebrating this day without you. So, will you let me be the lucky one to celebrate your birthday and Valentine’s Day with you, as your Valentine?❤️</h1>
         <div class="buttons">
             <button id="yes" onclick="showLove()">Yes</button>
             <button id="no" onmouseover="moveNo()">No</button>
         </div>
-        <p id="message" style="font-size: 20px; font-weight: bold; display: none;"></p>
+        <p id="message"></p>
     </div>
 
     <script>
@@ -57,8 +92,9 @@
         }
 
         function showLove() {
-            document.getElementById("message").innerText = "Moi Janisilu e ❤️🥰";
-            document.getElementById("message").style.display = "block";
+            let message = document.getElementById("message");
+            message.innerText = "Moi Janisilue ! ❤️🥰";
+            message.style.display = "block";
         }
     </script>
 </body>
