--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         }
         h1 {
             color: #d6336c;
-            font-size: 28px;
+            font-size: 24px;
             margin-bottom: 20px;
         }
         .buttons {
             display: flex;
             justify-content: center;
             gap: 20px;
+            position: relative;
+            margin-top: 20px;
         }
         button {
             font-size: 18px;
@@ -55,7 +57,7 @@
         #no {
             background-color: #dc3545;
             color: white;
-            position: absolute;
+            position: relative; /* No overlap initially */
         }
         #no:hover {
             background-color: #c82333;
@@ -75,7 +77,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>February 14th isn’t just Valentine’s Day—it’s the day the world was blessed with you. From the way you light up every moment to the way you make my heart race, I can’t imagine celebrating this day without you. So, will you let me be the lucky one to celebrate your birthday and Valentine’s Day with you, as your Valentine?❤️</h1>
+        <h1>February 14th isn’t just Valentine’s Day—it’s the day the world was blessed with you. From the way you light up every moment to the way you make my heart race, I can’t imagine celebrating this day without you. So, will you let me be the lucky one to celebrate your birthday and Valentine’s Day with you, as your Valentine? ❤️</h1>
         <div class="buttons">
             <button id="yes" onclick="showLove()">Yes</button>
             <button id="no" onmouseover="moveNo()">No</button>
@@ -85,10 +87,12 @@
 
     <script>
         function moveNo() {
-            let x = Math.random() * (window.innerWidth - 100);
-            let y = Math.random() * (window.innerHeight - 50);
-            document.getElementById("no").style.left = `${x}px`;
-            document.getElementById("no").style.top = `${y}px`;
+            let button = document.getElementById("no");
+            let x = Math.random() * (window.innerWidth - 200); 
+            let y = Math.random() * (window.innerHeight - 150);
+            button.style.position = "absolute"; // Now move it
+            button.style.left = `${x}px`;
+            button.style.top = `${y}px`;
         }
 
         function showLove() {
