--- a/index.html
+++ b/index.html
@@ -7,119 +7,58 @@
     <style>
         body {
             text-align: center;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ff9a9e, #fad0c4);
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            margin: 0;
-            overflow: hidden;
+            font-family: Arial, sans-serif;
+            background-color: #f8d7da;
         }
         .container {
-            background: white;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
-            width: 90%;
-            max-width: 400px;
-            position: relative;
-        }
-        .container:hover {
-            transform: scale(1.05);
+            margin-top: 100px;
         }
         h1 {
-            color: #d6336c;
-            font-size: 20px;
-            margin-bottom: 20px;
+            color: #dc3545;
         }
         .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
             margin-top: 20px;
-            position: relative;
         }
         button {
-            font-size: 16px;
-            padding: 12px 20px;
+            font-size: 18px;
+            padding: 10px 20px;
+            margin: 10px;
             border: none;
             cursor: pointer;
-            border-radius: 10px;
-            font-weight: bold;
-            transition: all 0.3s ease-in-out;
+            border-radius: 5px;
         }
         #yes {
             background-color: #28a745;
             color: white;
-            position: relative;
-        }
-        #yes:hover {
-            background-color: #218838;
         }
         #no {
             background-color: #dc3545;
             color: white;
             position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        #no:hover {
-            background-color: #c82333;
-        }
-        #message {
-            font-size: 18px;
-            font-weight: bold;
-            color: #2d3748;
-            margin-top: 20px;
-            display: none;
-            padding: 10px;
-            background: #fff3cd;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>February 14th isn’t just Valentine’s Day—it’s the day the world was blessed with you. From the way you light up every moment to the way you make my heart race, I can’t imagine celebrating this day without you. So, will you let me be the lucky one to celebrate your birthday and Valentine’s Day with you, as your Valentine? ❤️</h1>
+        <h1>February 14th isn’t just Valentine’s Day—it’s the day the world was blessed with you. From the way you light up every moment to the way you make my heart race, I can’t imagine celebrating this day without you. So, will you let me be the lucky one to celebrate your birthday and Valentine’s Day with you, as your Valentine?❤️</h1>
         <div class="buttons">
             <button id="yes" onclick="showLove()">Yes</button>
-            <button id="no" onmouseover="moveNo()" ontouchstart="moveNo(event)">No</button>
+            <button id="no" onmouseover="moveNo()">No</button>
         </div>
-        <p id="message"></p>
+        <p id="message" style="font-size: 20px; font-weight: bold; display: none;"></p>
     </div>
 
     <script>
-        function moveNo(event) {
-            if (event) event.preventDefault(); // Prevent unwanted touch behavior on mobile
-            
-            let button = document.getElementById("no");
-            let container = document.querySelector(".container");
-
-            // Get container boundaries
-            let containerRect = container.getBoundingClientRect();
-            let buttonRect = button.getBoundingClientRect();
-
-            // Calculate new position inside the container
-            let maxX = containerRect.width - buttonRect.width - 20;
-            let maxY = containerRect.height - buttonRect.height - 20;
-
-            let x = Math.random() * maxX;
-            let y = Math.random() * maxY;
-
-            // Apply position relative to container
-            button.style.position = "absolute";
-            button.style.left = `${x}px`;
-            button.style.top = `${y}px`;
+        function moveNo() {
+            let x = Math.random() * (window.innerWidth - 100);
+            let y = Math.random() * (window.innerHeight - 50);
+            document.getElementById("no").style.left = `${x}px`;
+            document.getElementById("no").style.top = `${y}px`;
         }
 
         function showLove() {
-            let message = document.getElementById("message");
-            message.innerText = "Moi Janisilue ! ❤️🥰";
-            message.style.display = "block";
+            document.getElementById("message").innerText = "Moi Janisilu e ❤️🥰";
+            document.getElementById("message").style.display = "block";
         }
     </script>
 </body>
